--- a/public/index.html
+++ b/public/index.html
@@ -9,16 +9,28 @@
 </head>
 <body>
     <!-- Header Start -->
-    <header id="home" class="bg-customBackColor w-full lg:h-[800px] md:h-[1078px] sm:h-[999px] cs:h-[1001px]">
-        <span><img src="img/ombak-garis.png" class="absolute w-full pt-[130px]" alt="ombak-garis"></span>
-        <div class="flex justify-center h-screen relative">
-            <div id="header" class="rounded-full bg-white cs:w-[80%] md:w-4/5 h-height88 flex items-center z-10 top-9 absolute">
-                <div class="container"> 
-                    <div class="flex items-center justify-between relative">
-                        <div class="px-6">
-                            <a class="text-4xl font-bold text-LogoColor" href="#LOGO">LOGO</a>
-                        </div>
-                        <div class="flex items-center px-2 cs:px-0">
+    <!-- <header id="home" class="w-2/2 bg-customBackColor max-w-[100%] min-h-[780px] relative"> -->
+        <section id="section-1" class="bg-customBackColor max-w-[100%] min-h-[780px] relative">
+            <div class="container flex justify-center">
+                <div class="rounded-full bg-white w-4/5 min-h-[88px] absolute top-7 flex items-center pl-10">
+                    <h1 class="text-[40px] text-[#BCBCBC]">LOGO</h1>
+                    <button id="hamburger" name="hamburger" type="button" class="block absolute right-9 lg:hidden">
+                        <span class="hamburger-line transition duration-300 ease-in-out origin-top-left"></span>
+                        <span class="hamburger-line transition duration-300 ease-in-out"></span>
+                        <span class="hamburger-line transition duration-300 ease-in-out origin-bottom-left"></span>
+                    </button>
+                </div>
+            </div>
+        </section>
+    </div>
+        <!-- <span><img src="img/ombak-garis.png" class="absolute w-full pt-[130px]" alt="ombak-garis"></span> -->
+        <!-- <div class="flex justify-center h-screen">
+            <div id="header" class="rounded-full bg-white cs:w-[80%] lg:w-4/5 lg:h-[88px] cs:h-[10%] flex items-center z-10 top-9 absolute">
+                    <div class="flex flex-wrap">
+                        <div class="container"> 
+                            <div class="flex flex-row justify-between">
+                        <a class="text-4xl font-bold text-LogoColor flex items-center cs:mx-4" href="#LOGO">LOGO</a>
+                        <div class="flex items-center md:px-2 cs:px-0">
                             <button id="hamburger" name="hamburger" type="button" class="block absolute right-9 lg:hidden">
                                 <span class="hamburger-line transition duration-300 ease-in-out origin-top-left"></span>
                                 <span class="hamburger-line transition duration-300 ease-in-out"></span>
@@ -28,19 +40,19 @@
                                 <ul class="block lg:flex items-center">
                                     <li class="group relative">
                                         <a href="#home" class="text-base text-dark py-2 mx-4 flex group-hover:text-primary">Home</a>
-                                        <span class="lg:absolute rounded-full bottom-[-7px] w-2 h-2 left-1/2 border-box bg-primary transform scale-x-0 transition-transform origin-left group-hover:scale-x-100"></span>
+                                        <span class="lg:absolute rounded-full bottom-[-7px] w-2 h-2 left-1/2 bg-primary transform scale-x-0 transition-transform origin-left group-hover:scale-x-100"></span>
                                     </li>
                                     <li class="group relative">
                                         <a href="#about" class="text-base text-dark py-2 mx-4 flex group-hover:text-primary">About me</a>
-                                        <span class="lg:absolute rounded-full bottom-[-7px] w-2 h-2 left-1/2 border-box bg-primary transform scale-x-0 transition-transform origin-left group-hover:scale-x-100"></span>
+                                        <span class="lg:absolute rounded-full bottom-[-7px] w-2 h-2 left-1/2 bg-primary transform scale-x-0 transition-transform origin-left group-hover:scale-x-100"></span>
                                     </li>
                                     <li class="group relative">
                                         <a href="#course" class="text-base text-dark py-2 mx-4 flex group-hover:text-primary">Course</a>
-                                        <span class="lg:absolute rounded-full bottom-[-7px] w-2 h-2 left-1/2 border-box bg-primary transform scale-x-0 transition-transform origin-left group-hover:scale-x-100"></span>
+                                        <span class="lg:absolute rounded-full bottom-[-7px] w-2 h-2 left-1/2 bg-primary transform scale-x-0 transition-transform origin-left group-hover:scale-x-100"></span>
                                     </li>
                                     <li class="group relative">
                                         <a href="#contact" class="text-base text-dark py-2 mx-4 flex group-hover:text-primary">Contact Us</a>
-                                        <span class="lg:absolute rounded-full bottom-[-7px] w-2 h-2 left-1/2 border-box bg-primary transform scale-x-0 transition-transform origin-left group-hover:scale-x-100"></span>
+                                        <span class="lg:absolute rounded-full bottom-[-7px] w-2 h-2 left-1/2 bg-primary transform scale-x-0 transition-transform origin-left group-hover:scale-x-100"></span>
                                     </li>
                                     <div class="login-register-nav lg:flex lg:gap-3 box-border">
                                         <li class="group lg:border-solid lg:border-2 lg:rounded-full border-black w-[146px] h-[53px] lg:flex items-center justify-center cursor-pointer lg:hover:border-primary lg:hover:bg-primary transition-colors duration-100">
@@ -55,22 +67,23 @@
                         </div>
                     </div>
                 </div>
-            </div>
+                </div>
+            </div> -->
             <!-- Hero / header Section  -->
-            <section id="home" class="lg:pt-36 cs:pt-20 absolute top-0">
+            <!-- <section id="home" class="lg:pt-36 cs:pt-20 absolute top-0">
                 <div class="container">
-                    <div class="flex flex-wrap cs:text-center lg:text-left">
-                        <div class="w-full self-center px-10 lg:w-1/2 lg:order-1 cs:order-2">
-                            <div class="relative flex items-center justify-center bg-orange-400 cs:w-full md:w-[50%] cs:h-[80%] lg:w-[331px] lg:h-[43px] rounded-full mb-6 md:mx-auto lg:mx-0 cs:mt-6 mt-0">
+                    <div class="flex flex-wrap lg:text-left">
+                        <div class="sm:w-full self-center px-10 lg:w-1/2 lg:order-1 cs:order-2">
+                            <div class="relative flex items-center justify-center bg-orange-400 cs:w-full md:w-[50%] cs:h-[80%] lg:w-[331px] md:h-[43px] rounded-full mb-6 md:mx-auto lg:mx-0 cs:mt-6 mt-0">
                                 <img src="img/Gambar Pelindung.png" alt="p" class="pr-2">
                                 <p class="text-white text-center py-4 cs:text-xs md:text-[16px]">Over 100+ member that join the course</p>
                             </div>
                             <h1 class="font-normal lg:text-5xl cs:text-4xl mb-8 lg:right-0">Get your <span class="font-bold text-primary">healthy</span> by <br>changing your <span class="font-bold text-[#FF6C6C] line-through">bad</span> <span class="font-bold text-primary">habits</span> 
                             </h1>
                             <p class="font-normal text-[16px] mb-8">Be the best version of you. All good things are built little by little and step by step, with daily acts.</p>
-                            <a href="#home" class="border-2 rounded-full border-[#414141] text-black py-3 px-8 hover:shadow-sm hover:opacity-80 transition duration-300 ease-in-out">Join our course Now</a>
+                            <a href="#home" class="border-2 rounded-full border-[#414141] text-black py-3 px-8 hover:shadow-cs hover:opacity-80 transition duration-300 ease-in-out">Join our course Now</a>
                         </div>
-                        <div class="w-full lg:self-end lg:px-4 lg:w-1/2 relative lg:relative lg:order-2 sm:order-1 sm:w-[70%] sm:mx-auto">
+                        <div class="w-full self-end lg:px-4 lg:w-1/2 relative lg:relative lg:order-2 sm:order-1 sm:w-[80%] sm:mx-auto">
                             <div class="mt-10 relative">
                                 <img src="img/bintang.png" alt="bintang" class="absolute lg:bottom-[11rem] lg:left-[30px] cs:bottom-[20%] cs:w-[20%]">
                                 <img src="img/lingkaran-h.png" alt="" class="absolute lg:top-[180px] lg:left-[45px] cs:bottom-[50%] cs:w-[20%]">
@@ -83,9 +96,9 @@
                 </div>
         </section>
         </div>
-    </header>
+    </header> -->
     <!-- Section -->
-    <section id="section-2" class="pt-14">
+    <!-- <section id="section-2" class="pt-14">
         <div class="container">
             <div class="flex flex-wrap lg:w-5/6 lg:text-left cs:w-full cs:text-center">
                 <h1 class="font-normal lg:text-5xl mb-8 lg:right-0 cs:text-[34px]">We live in an <span class="font-bold text-primary">abundant</span> and <span class="font-bold text-primary">unhealthy</span> environment where eating poorly is the norm</h1>
@@ -101,10 +114,10 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- section 3 -->
-    <section id="section-3" class="pt-20">
+    <!-- <section id="section-3" class="pt-20">
         <div class="container">
             <div class="flex flex-wrap lg:w-3/6 lg:text-left cs:w-full cs:text-center">
                 <h1 class="font-normal lg:text-5xl mb-8 lg:right-0 cs:text-[34px]">Take a look why you need to take action for your <span class="font-bold text-[#E8C300]">good habits</span>
@@ -136,10 +149,10 @@
                 <img src="img/sayur.png" alt="gambar-sayur" class="lg:w-1/2 cs:hidden lg:block">
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- Section 4 -->
-    <section id="section-4" class="section-4 cs:mt-10 w-full h-[443px] flex items-center">
+    <!-- <section id="section-4" class="section-4 cs:mt-10 w-full h-[443px] flex items-center">
         <div class="container">
             <div class="flex flex-wrap bg-header4">
                 <div class="deskripsi md:w-1/2">
@@ -152,50 +165,50 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- Section 5 -->
-    <section id="section-5" class="bg-primary">
+    <!-- <section id="section-5" class="bg-primary">
         <div class="container">
             <div class="flex flex-wrap justify-between pb-4">
                 <img src="img/logo.png" alt="logo">
                 <span class="flex flex-row items-center">
-                <p class="text-white text-[22px] pr-24">Ready to get started?</p>
+                <p class="text-white text-[22px] pr-12">Ready to get started?</p>
                 <a href="#" class="w-[175px] h-[50px] bg-white text-primary font-normal rounded-full text-center py-3">Get Started</a>
                 </span>
             </div>
             <hr class="bg-white opacity-10">
-            <div class="flex flex-wrap flex-row w-full text-white pt-6 justify-between cs:justify-around">
-                <div class="block md:w-1/3 cs:w-full pb-10 pr-5">
+            <div class="flex flex-wrap text-white pt-6 md:justify-start cs:justify-around">
+                <div class="block md:w-1/3 cs:w-full mr-20">
                     <h1 class="font-bold text-[17px]">Keep in Mind</h1>
                     <p class="pt-4">Devoting time and energy to yourself is not being selfish. It is the best thing you can do for your family, your friends and your work. iimportant and we end up putting on the last.</p>
                 </div>
-                <div class="block">
+                <div class="w-1/6 cs:flex flex-col cs:pt-10 md:pt-0">
                     <a href="#" class="font-bold text-[17px] block">Menu</a>
                     <a href="#" class="font-normal text-[16px] block pt-4">Home</a>
                     <a href="#" class="font-normal text-[16px] block pt-4">About me</a>
                     <a href="#" class="font-normal text-[16px] block pt-4">Course</a>
                     <a href="#" class="font-normal text-[16px] block pt-4">Contact</a>
                 </div>
-                <div class="block md:w-1/3">
+                <div class="w-1/6 cs:flex flex-col cs:pt-10 md:pt-0">
                     <a href="#" class="font-bold text-[17px] block">Course</a>
                     <a href="#" class="font-normal text-[16px] block pt-4">Login</a>
                     <a href="#" class="font-normal text-[16px] block pt-4">Register</a>
                 </div>
             </div> 
-            <div class="flex flex-wrap flex-row w-full text-white pt-6 justify-between">
-                <div class="p flex flex-row">
+            <div class="flex flex-wrap flex-row w-full text-white pt-6 pb-6 justify-between">
+                <div class="flex flex-row">
                     <p class="pr-5">Terms & Conditions</p>
                     <p>Privacy Policy</p>
                 </div>
-                <div class="flex-row flex">
+                <div class="flex flex-row cs:pt-5 lg:pt-0 items-center cs:mx-auto md:mx-0">
                     <a href="#" class="pr-10"><img src="img/icon-facebook.png" alt="fb"></a>
                     <a href="#" class="pr-10"><img src="img/icon-instagram.png" alt="ig"></a>
                     <a href="#" class="pr-10"><img src="img/icon-twitter.png" alt="twt"></a>
                 </div>
             </div> 
         </div>
-    </section>
+    </section> -->
     <script src="script.js"></script>
 </body>
 </html>
