--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <!-- Header Start -->
-        <section id="section-1" class="bg-customBackColor max-w-[100%] min-h-[768px] relative">
+        <section id="section-1" class="bg-customBackColor max-w-[100%] min-h-[700px] relative">
             <span><img src="img/ombak-garis.png" class="absolute w-full pt-[130px]" alt="ombak-garis"></span>
             <div class="container flex justify-center">
                 <div id="header" class="rounded-full bg-white sm:w-4/5 cs:h-[88px] kcs:h-[70px] absolute top-7 flex items-center kcs:w-[311px]">
@@ -19,7 +19,7 @@
                         <span class="hamburger-line transition duration-300 ease-in-out"></span>
                         <span class="hamburger-line transition duration-300 ease-in-out origin-bottom-left"></span>
                     </button>
-                    <nav id="nav-menu" class="hidden absolute py-4 shadow-lg rounded-lg max-w-[280px] w-full top-full lg:block lg:static lg:max-w-full lg:shadow-none">
+                    <nav id="nav-menu" class="hidden absolute py-4 shadow-lg rounded-lg max-w-[280px] w-full top-full lg:block lg:static lg:max-w-full lg:shadow-none cks:bg-slate-300 kcs:right-0 z-99 bg-white">
                         <ul class="block lg:flex items-center justify-end mr-4">
                             <li class="group relative">
                                 <a href="#home" class="text-base text-dark py-2 mx-4 flex group-hover:text-primary">Home</a>
@@ -37,8 +37,8 @@
                                 <a href="#contact" class="text-base text-dark py-2 mx-4 flex group-hover:text-primary">Contact Us</a>
                                 <span class="lg:absolute rounded-full bottom-[-7px] w-2 h-2 left-1/2 bg-primary transform scale-x-0 transition-transform origin-left group-hover:scale-x-100"></span>
                             </li>
-                            <div class="login-register-nav lg:flex lg:gap-3 box-border">
-                                <li class="group lg:border-solid lg:border-2 lg:rounded-full border-black w-[146px] h-[53px] lg:flex items-center justify-center cursor-pointer lg:hover:border-primary lg:hover:bg-primary transition-colors duration-100">
+                            <div class="login-register-nav lg:flex lg:gap-3 box-border lg:hover:bg-primary transition-colors duration-100">
+                                <li class="group lg:border-solid lg:border-2 lg:rounded-full border-black w-[146px] h-[53px] lg:flex items-center justify-center cursor-pointer lg:hover:border-primary">
                                     <a href="#login" class="text-base text-dark py-2 mx-4 flex lg:group-hover:text-white group-hover:text-primary border-primary">Login</a>
                                 </li>
                                 <li class="group lg:bg-black lg:border-2 lg:rounded-full w-[146px] lg:h-[53px] lg:flex items-center justify-center cursor-pointer lg:hover:bg-primary transition-colors duration-100 lg:border-black lg:hover:border-primary">
@@ -51,7 +51,7 @@
             </div>
             <div class="flex flex-wrap flex-row pt-14 container max-w-[100%] mb-20 sm:w-4/5 kcs:flex kcs:flex-col lg:flex-row">
                 <div class="lg:w-1/2 kcs:pt-[80px] cs:pt-[100px] lg:mt-36">
-                    <div class="relative flex items-center justify-center bg-orange-400 rounded-full sm:w-[331px] lg:h-[43px] lg:px-3 lg:py-3">
+                    <div class="flex items-center justify-center bg-orange-400 rounded-full sm:w-[331px] lg:h-[43px] lg:px-3 lg:py-3 z-9999">
                         <img src="img/Gambar Pelindung.png" class="pr-2">
                         <p class="text-white text-center py-4 sm:text-[16px] kcs:text-[10px]">Over 100+ member that join the course</p>
                     </div>
@@ -60,7 +60,7 @@
                     <p class="font-normal text-[16px] mb-8">Be the best version of you. All good things are built little by little and step by step, with daily acts.</p>
                     <a href="#home" class="border-2 rounded-full border-[#414141] text-black kcs:py-3 cs:px-8 kcs:px-0 hover:shadow-cs hover:opacity-80 transition duration-300 ease-in-out kcs:h-[100%] kcs:w-4/5">Join our course Now</a>
                 </div>
-                <div class="lg:w-1/2 order-2 kcs:pt-[40px] sm:pt-[100px] kcs:w-[420px] absolute right-0 bottom-0 box-border">
+                <div class="lg:w-1/2 order-2 kcs:pt-[40px] sm:pt-[100px] kcs:w-[420px] right-0 z-10">
                     <img src="img/gambar-cewek2.png" alt="gambar-cewek2" class="lg:max-w-[500px]">
                 </div>
             </div>
@@ -68,7 +68,7 @@
         </section>
 
         <!-- Section 3 -->
-        <section id="section-3" class="flex flex-row md:pt-10 container max-w-[100%] mb-16 sm:w-4/5 kcs:flex kcs:flex-col border-blue">
+        <section id="section-3" class="flex flex-row pt-10 container max-w-[100%] mb-16 sm:w-4/5 kcs:flex kcs:flex-col border-blue">
                 <div class="flex flex-wrap text-left">
                     <h1 class="font-normal lg:text-5xl mb-8 lg:right-0 kcs:text-4xl sm:text-[34px] lg:w-3/5">We live in an <span class="font-bold text-primary">abundant</span> and <span class="font-bold text-primary">unhealthy</span> environment where eating poorly is the norm</h1>
                 </div>
